--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,8 @@
 	<meta http-equiv="X-Frame-Options" content="sameorigin">
 
 	<!-- CSS -->
+	<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+  <link href="/css/mc.css" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 
 	<!--Favicon-->
