Social Share Buttons

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,9 @@ layout: default
     {{ page.date | date: "%B %-d, %Y" }}
     {% if page.author %} - {{ page.author }}{% endif %}
     </p>
+   <br>
+   <a href="//www.facebook.com/dialog/share?app_id=805810592863515&amp;display=page&amp;href=http://morethanrunners.github.io{{ page.url}}" target="_blank"><i class="fa fa-facebook-official fa-lg social"></i></a>
+   <a href="http://twitter.com/intent/tweet?status={{ page.title }}+http://morethanrunners.github.io{{ page.url}}&amp;via=erwinhenriquez"><i class="fa fa-twitter fa-lg social"></i></a>
   </header>
   <section class="post-content">{{ content }}</section>
 </article>
