--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 
 	<!--Favicon-->
-	<link rel="shortcut icon" href="{{ "/favicon.ico" | prepend: site.baseurl }}" type="image/x-icon">
+	<link rel="shortcut icon" href="{{ "/favicon.png" | prepend: site.baseurl }}" type="image/x-icon">
 
 	<!-- Canonical -->
 	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
@@ -45,4 +45,21 @@
 	ga('send', 'pageview');
 	</script>
 	{% endif %}
+
+  <!-- Facebook SDK-->
+ <div id="fb-root"></div>
+ <script>
+  (function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.5&appId=805810592863515";
+  fjs.parentNode.insertBefore(js, fjs);
+}
+   (document, 'script', 'facebook-jssdk'));
+ </script>
+
+ <!-- Twitter SDK-->
+ <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+ </script>
 </head>
